DataProject.ipynb modified again

--- a/DataProject.ipynb
+++ b/DataProject.ipynb
@@ -1600,13 +1600,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "5f814dff-e3cd-4b44-8826-a341321f6587",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'DataProject.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    }
+   ],
    "source": [
     "!git add \"DataProject.ipynb\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "12b6eb35-57c1-448f-8049-1cf344c9c8bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 32b696c] DataProject.ipynb modified\n",
+      " 1 file changed, 454 insertions(+), 104 deletions(-)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"DataProject.ipynb modified\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e181b94e-77e5-4892-a0b8-775f6c64a5e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/MohammadRezaeian1997/DataProject.git\n",
+      "   57dc119..32b696c  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push \"https://github.com/MohammadRezaeian1997/DataProject.git\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4c2d5ac-61f4-4554-9b32-dd3074fe9aa4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
