--- a/DataProject.ipynb
+++ b/DataProject.ipynb
@@ -1656,8 +1656,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "a4c2d5ac-61f4-4554-9b32-dd3074fe9aa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is ahead of 'origin/main' by 1 commit.\n",
+      "  (use \"git push\" to publish your local commits)\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   DataProject.ipynb\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\t.ipynb_checkpoints/\n",
+      "\tdft-road-casualty-statistics-casualty-provisional-mid-year-unvalidated-2022.csv\n",
+      "\tvenv1/\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "bb473970-110b-4d3b-8106-96fbe3da0760",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'DataProject.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add \"DataProject.ipynb\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d346ed8-83fe-4afc-b689-b4ea08614f80",
    "metadata": {},
    "outputs": [],
    "source": []
