DataProject modified for the third time

--- a/DataProject.ipynb
+++ b/DataProject.ipynb
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "id": "5018a99a-ee4b-4f7e-9387-99073cff0d13",
    "metadata": {},
    "outputs": [
@@ -1577,95 +1577,7 @@
      "output_type": "stream",
      "text": [
       "On branch main\n",
-      "Your branch is up to date with 'origin/main'.\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\tmodified:   DataProject.ipynb\n",
-      "\n",
-      "Untracked files:\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\n",
-      "\t.ipynb_checkpoints/\n",
-      "\tdft-road-casualty-statistics-casualty-provisional-mid-year-unvalidated-2022.csv\n",
-      "\tvenv1/\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "5f814dff-e3cd-4b44-8826-a341321f6587",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'DataProject.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git add \"DataProject.ipynb\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "12b6eb35-57c1-448f-8049-1cf344c9c8bc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main 32b696c] DataProject.ipynb modified\n",
-      " 1 file changed, 454 insertions(+), 104 deletions(-)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git commit -m \"DataProject.ipynb modified\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "e181b94e-77e5-4892-a0b8-775f6c64a5e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To https://github.com/MohammadRezaeian1997/DataProject.git\n",
-      "   57dc119..32b696c  main -> main\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git push \"https://github.com/MohammadRezaeian1997/DataProject.git\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "a4c2d5ac-61f4-4554-9b32-dd3074fe9aa4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch main\n",
-      "Your branch is ahead of 'origin/main' by 1 commit.\n",
+      "Your branch is ahead of 'origin/main' by 3 commits.\n",
       "  (use \"git push\" to publish your local commits)\n",
       "\n",
       "Changes not staged for commit:\n",
@@ -1689,8 +1601,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "bb473970-110b-4d3b-8106-96fbe3da0760",
+   "execution_count": 63,
+   "id": "abe3732d-4409-48aa-b673-0a29869f2106",
    "metadata": {},
    "outputs": [
     {
@@ -1708,10 +1620,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d346ed8-83fe-4afc-b689-b4ea08614f80",
+   "id": "fdeb479a-31df-4340-b1f8-1f8fb1677d7b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "git commit -am \"DataProject modified fo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e181b94e-77e5-4892-a0b8-775f6c64a5e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/MohammadRezaeian1997/DataProject.git\n",
+      "   57dc119..32b696c  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push \"https://github.com/MohammadRezaeian1997/DataProject.git\""
+   ]
   }
  ],
  "metadata": {
