DataProject modified for the 4th time

--- a/DataProject.ipynb
+++ b/DataProject.ipynb
@@ -1619,17 +1619,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "fdeb479a-31df-4340-b1f8-1f8fb1677d7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 0d82675] DataProject modified for the third time\n",
+      " 1 file changed, 9 insertions(+), 76 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'DataProject.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    }
+   ],
    "source": [
-    "git commit -am \"DataProject modified fo"
+    "!git commit -am \"DataProject modified for the third time\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
+   "id": "03528559-1925-47fd-9f46-345218725c7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is ahead of 'origin/main' by 4 commits.\n",
+      "  (use \"git push\" to publish your local commits)\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\t.ipynb_checkpoints/\n",
+      "\tdft-road-casualty-statistics-casualty-provisional-mid-year-unvalidated-2022.csv\n",
+      "\tvenv1/\n",
+      "\n",
+      "nothing added to commit but untracked files present (use \"git add\" to track)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "id": "e181b94e-77e5-4892-a0b8-775f6c64a5e0",
    "metadata": {},
    "outputs": [
@@ -1638,13 +1682,55 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/MohammadRezaeian1997/DataProject.git\n",
-      "   57dc119..32b696c  main -> main\n"
+      "   8bab422..0d82675  main -> main\n"
      ]
     }
    ],
    "source": [
     "!git push \"https://github.com/MohammadRezaeian1997/DataProject.git\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "12776120-832a-4a2e-98bc-368810e5e9fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.inspection import PartialDependenceDisplay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "5b671dad-efad-4470-964e-bf29c0f1f365",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "target not in est.classes_, got 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[72], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m partial_dependence_display \u001b[38;5;241m=\u001b[39m \u001b[43mPartialDependenceDisplay\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_estimator\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrf_classifier\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfeatures\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfeature_names\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msex_of_casualty\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mage_band_of_casualty\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpedestrian_location\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpedestrian_movement\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m            \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcar_passenger\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbus_or_coach_passenger\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcasualty_home_area_type\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtarget\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mF:\\Python Projects\\Final Project\\venv1\\lib\\site-packages\\sklearn\\inspection\\_plot\\partial_dependence.py:535\u001b[0m, in \u001b[0;36mPartialDependenceDisplay.from_estimator\u001b[1;34m(cls, estimator, X, features, sample_weight, categorical_features, feature_names, target, response_method, n_cols, grid_resolution, percentiles, method, n_jobs, verbose, line_kw, ice_lines_kw, pd_line_kw, contour_kw, ax, kind, centered, subsample, random_state)\u001b[0m\n\u001b[0;32m    530\u001b[0m     target_idx \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msearchsorted(estimator\u001b[38;5;241m.\u001b[39mclasses_, target)\n\u001b[0;32m    531\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m    532\u001b[0m         \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;241m0\u001b[39m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m target_idx \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mlen\u001b[39m(estimator\u001b[38;5;241m.\u001b[39mclasses_))\n\u001b[0;32m    533\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m estimator\u001b[38;5;241m.\u001b[39mclasses_[target_idx] \u001b[38;5;241m!=\u001b[39m target\n\u001b[0;32m    534\u001b[0m     ):\n\u001b[1;32m--> 535\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtarget not in est.classes_, got \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(target))\n\u001b[0;32m    536\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    537\u001b[0m     \u001b[38;5;66;03m# regression and binary classification\u001b[39;00m\n\u001b[0;32m    538\u001b[0m     target_idx \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "\u001b[1;31mValueError\u001b[0m: target not in est.classes_, got 0"
+     ]
+    }
+   ],
+   "source": [
+    "partial_dependence_display = PartialDependenceDisplay.from_estimator(rf_classifier, X_train, features=[0, 1,2,3,4,5,6], feature_names=['sex_of_casualty', 'age_band_of_casualty', 'pedestrian_location', 'pedestrian_movement',\n",
+    "            'car_passenger', 'bus_or_coach_passenger', 'casualty_home_area_type'],target=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2564526f-3fcb-4bbf-a8cb-809db5237fb7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
